# Parallels

./: CMakeLists.txt  Makefile  README.md  README_RUS.md
assets/: gauss_ex_1.txt  gauss_ex_2.txt
src/: CMakeLists.txt  Makefile
src/Winograd/: app.cc
src/Winograd/common/: s21_matrix.cc  s21_matrix.h  s21_winograd_data.h
src/Winograd/controller/: s21_controller.cc  s21_controller.h
src/Winograd/model/: s21_winograd.cc  s21_winograd.h
src/Winograd/view/: s21_view.cc  s21_view.h
src/ant_colony/controller/: controller.cc
src/ant_colony/model/: ant.cc  ant.h  ant_colony_base.cc  ant_colony_sync.h  pheromone.h  tsm_result.h
src/ant_colony/view/: view.cc
src/gauss/: main.cc
src/gauss/model/: gauss.cc  gauss.h
src/source/ant_colony/: main.cc
src/source/ant_colony/async_solution/: async_ant_colony.cc  async_ant_colony.h  thread_pool.h
src/source/ant_colony/common/: ant.cc  ant.h  ant_colony.h  graph.cc  graph.h  path_structure.h  pheromone.cc  pheromone.h
src/source/ant_colony/controller/: controller.h
src/source/ant_colony/model/: ant.cc  ant.h  ant_colony_async.cc  ant_colony_async.h  ant_colony_base.cc  ant_colony_base.h  ant_colony_sync.cc  ant_colony_sync.h  graph.cc  graph.h  pheromone.cc  pheromone.h  tsm_result.h
src/source/ant_colony/sync_solution/: ant_colony.cc  ant_colony.h  sync_ant_colony.cc  sync_ant_colony.h
src/source/ant_colony/view/: view.cc  view.h
src/source/gauss/: gauss.cc  gauss.h  main.cc  view.cc
src/source/gauss/controller/: controller.cc  controller.h
src/source/gauss/model/: gauss.cc  gauss.h  gauss_temp.cpp
src/source/gauss/view/: view.cc  view.h
src/source/winograd/: app.cc
src/source/winograd/common/: s21_matrix.cc  s21_matrix.h  (+1 more)
src/tests/: CMakeLists.txt  ant_colony.cc  common_tests.h  gauss.cc  main_test.cc
src/winograd/model/: s21_winograd.h
tests/: CMakeLists.txt  ant_colony.cc  common_tests.h  gauss.cc
(+6 files in other folders)
